fix: style changes

--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -61,9 +61,9 @@
                 <button nbButton status="primary" class="mb-2 w-75 btn-lg">Schedule</button>
             </div> 
             <ng-template #templateRef>
-                <button nbButton status="success" class="mx-2 m-1">Audio</button>
-                <button nbButton status="success" class="mx-2 m-1">Video</button>
-                <button nbButton status="success" class="mx-2 m-1">Call Bridge</button>
+                <button nbButton status="success" class="m-1">Audio</button>
+                <button nbButton status="success" class="m-1">Video</button>
+                <button nbButton status="success" class="m-1">Call Bridge</button>
               </ng-template>
         </div>
     </nb-card-body>
