fix: Added time range

--- a/src/app/pages/patients/vitals/vitals.component.html
+++ b/src/app/pages/patients/vitals/vitals.component.html
@@ -16,13 +16,12 @@
             <div class="col-md-1">
                 <p class="subtitle">Range</p>
             </div>
-            <div class="col-md-7">
-                <button nbButton status="primary" class="m-1">1w</button>
-                <button nbButton status="primary" class="m-1">1m</button>
-                <button nbButton status="primary" class="m-1">3m</button>
-                <button nbButton status="primary" class="m-1">6m</button>
-                <button nbButton status="primary" class="m-1">1y</button>
-                <button nbButton status="primary" class="m-1">All</button>
+            <div class="col-md-7 pt-3">
+                <a href="" class="m-1">1w</a>
+                <a href="" class="m-1">1m</a>
+                <a href="" class="m-1">3m</a>
+                <a href="" class="m-1">6m</a>
+                <a href="" class="m-1">1y</a>
             </div>
             <div class="col-md-1">
                 <p class="subtitle">Custom:</p>
