--- a/src/app/pages/patients/vitals/vitals.component.html
+++ b/src/app/pages/patients/vitals/vitals.component.html
@@ -13,22 +13,23 @@
                 [controlName]="'dateRange'"></date-range-picker>
             </div>  -->
             <!-- <div class="col-auto my-auto">{{'kTimeRange' | translate}}</div> -->
-            <div class="col-md-1">
-                <p class="subtitle">Range</p>
+            <div class="col-md-2">
+                <p class="subtitle">Date Range</p>
             </div>
-            <div class="col-md-7 pt-3">
-                <a href="" class="m-1">1w</a>
-                <a href="" class="m-1">1m</a>
-                <a href="" class="m-1">3m</a>
-                <a href="" class="m-1">6m</a>
-                <a href="" class="m-1">1y</a>
+            <div class="col-md-4 pt-3">          
+                <a (click)="getList('1w')" class="m-1">1w</a>
+                <a (click)="getList('1m')" class="m-1">1m</a>
+                <a (click)="getList('3m')" class="m-1">3m</a>
+                <a (click)="getList('6m')" class="m-1">6m</a>
+                <a (click)="getList('1m')" class="m-1">1y</a> 
+                <a (click)="getList('all')" class="m-1">All</a>   
             </div>
-            <div class="col-md-1">
-                <p class="subtitle">Custom:</p>
+            <div class="col-md-2">
+                <p class="subtitle mx-4">Custom Date</p>
             </div>
-            <div class="col-md-3">
-                <input nbInput placeholder="Pick a date range" class="m-1" [nbDatepicker]="formpicker">
-                <nb-rangepicker #formpicker></nb-rangepicker>
+            <div class="col-md-4">
+                <input nbInput placeholder="Pick a date range" class="m-1 formControl" [nbDatepicker]="formcontrol" [formControl]="formcontrol">
+                <nb-rangepicker #formcontrol></nb-rangepicker>
             </div>
         </div>
     </nb-card-header>
