--- a/src/app/pages/patients/vitals/vitals.component.html
+++ b/src/app/pages/patients/vitals/vitals.component.html
@@ -28,7 +28,7 @@
                 <p class="subtitle mx-4">Custom Date</p>
             </div>
             <div class="col-md-4">
-                <input nbInput placeholder="Pick a date range" class="m-1 formControl" [nbDatepicker]="formcontrol" [formControl]="formcontrol">
+                <input nbInput placeholder="Pick a date range" class="form-control" [nbDatepicker]="formcontrol" fullWidth>
                 <nb-rangepicker #formcontrol></nb-rangepicker>
             </div>
         </div>
