fix: button change

--- a/src/app/pages/patients/vitals/vitals.component.html
+++ b/src/app/pages/patients/vitals/vitals.component.html
@@ -27,8 +27,8 @@
             <div class="col-md-2">
                 <p class="subtitle mx-4">Custom Date</p>
             </div>
-            <div class="col-md-4">
-                <input nbInput placeholder="Pick a date range" class="form-control" [nbDatepicker]="formcontrol" fullWidth>
+            <div class="col-md-3">
+                <input nbInput placeholder="Pick a date range" class="form-control" [nbDatepicker]="formcontrol">
                 <nb-rangepicker #formcontrol></nb-rangepicker>
             </div>
         </div>
