fix: chart theme

--- a/src/app/pages/patients/vitals/vitals.component.html
+++ b/src/app/pages/patients/vitals/vitals.component.html
@@ -17,12 +17,12 @@
                 <p class="subtitle">Date Range</p>
             </div>
             <div class="col-md-5 pt-1">                        
-                <button nbButton outline status="primary" (click)="getList('1w')" class="m-1" >1w</button>
-                <button nbButton outline status="primary" (click)="getList('1m')" class="m-1">1m</button>
-                <button nbButton outline status="primary" (click)="getList('3m')" class="m-1">3m</button>
-                <button nbButton outline status="primary" (click)="getList('6m')" class="m-1">6m</button>
-                <button nbButton outline status="primary" (click)="getList('1y')" class="m-1">1y</button>
-                <button nbButton outline status="primary" (click)="getList('all')" class="m-1">All</button>          
+                <button nbButton outline status="primary" (click)="getList('1w')" class="m-1" size="tiny">1w</button>
+                <button nbButton outline status="primary" (click)="getList('1m')" class="m-1" size="tiny">1m</button>
+                <button nbButton outline status="primary" (click)="getList('3m')" class="m-1" size="tiny">3m</button>
+                <button nbButton outline status="primary" (click)="getList('6m')" class="m-1" size="tiny">6m</button>
+                <button nbButton outline status="primary" (click)="getList('1y')" class="m-1" size="tiny">1y</button>
+                <button nbButton outline status="primary" (click)="getList('all')" class="m-1" size="tiny">All</button>          
             </div>
             <div class="col-md-2">
                 <p class="subtitle mx-4">Custom Date</p>
