fix: chart vitals data sorting

--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -58,9 +58,9 @@
             <div class="col-md-3 mt-3">
                 <button nbButton status="primary" class="mb-2 w-100 btn-lg" size="small">
                     <nb-icon icon="message-circle-outline"></nb-icon>Chat</button>
-                <button nbButton  [nbPopover]="templateRef" nbPopoverPlacement="right" status="primary" class="mb-2 w-100 btn-lg" size="small">
+                <button nbButton  [nbPopover]="templateRef" nbPopoverPlacement="right" status="success" class="mb-2 w-100 btn-lg" size="small">
                     <nb-icon icon="phone-call-outline"></nb-icon>Call</button>
-                <button nbButton status="primary" class="mb-2 w-100" size="small"><nb-icon icon="clock-outline"></nb-icon>Schedule</button>
+                <button nbButton status="warning" class="mb-2 w-100" size="small"><nb-icon icon="clock-outline"></nb-icon>Schedule</button>
             </div> 
             <ng-template #templateRef>
                 <div class="p-3">
