--- a/src/app/pages/patients/vitals/chart/chart.component.html
+++ b/src/app/pages/patients/vitals/chart/chart.component.html
@@ -1,5 +1,5 @@
 <p>{{name}} </p>
-<div class="d-block" [nbSpinner]="isLoading">
+<div class="d-block">
     <canvas baseChart width="400" height="150" [datasets]="lineChartData" [labels]="lineChartLabels"
         [colors]="lineChartColors" [legend]="lineChartLegend" [chartType]="lineChartType" [plugins]="lineChartPlugins">
     </canvas>
