--- a/src/app/pages/patients/vitals/vitals.component.html
+++ b/src/app/pages/patients/vitals/vitals.component.html
@@ -20,8 +20,8 @@
             </span>
             <span class="ps-2">
                 <input nbInput placeholder="Pick a date range" class="form-control" [nbDatepicker]="formcontrol"
-                    size="small">
-                <nb-rangepicker #formcontrol></nb-rangepicker>
+                    size="small" [(ngModel)]="selectedDateRange">
+                <nb-rangepicker #formcontrol (dateChange)="selectedDate($event)"></nb-rangepicker>
             </span>
         </div>
     </nb-card-header>
