--- a/src/app/pages/patients/visits/visits.component.html
+++ b/src/app/pages/patients/visits/visits.component.html
@@ -1,4 +1,4 @@
-<ng-container>
+<!-- <ng-container>
     <div class="row p-3">
         <div class="col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3 text-center cursor-pointer">
             <img src="assets/icon/prev-date.svg" class="img-ht">
@@ -26,4 +26,5 @@
 
     </div>
 
-</ng-container>
+</ng-container> -->
+<p>visits coming soon..</p>
