--- a/src/app/pages/patients/care-team/care-team.component.html
+++ b/src/app/pages/patients/care-team/care-team.component.html
@@ -1,4 +1,4 @@
-<nb-card size="large" style="overflow: auto" status="info" class="mt-3">
+<nb-card size="large" style="overflow: auto" status="info" class="mt-3" [nbSpinner]="isLoading">
     <nb-card-header>
         <div class="row">
             <div class="col-10">
@@ -24,7 +24,7 @@
                     <h6 *ngIf="!careTeam" class="text-center">{{'kMsgNoCaregivers' | translate}}</h6>
             </div>
         </div> -->
-        <app-care-circle class="d-flex justify-content-center" [config]="team"></app-care-circle>
+        <app-care-circle class="d-flex justify-content-center" [config]="team" (stopLoader)="isLoading = false"></app-care-circle>
     </nb-card-body>
 </nb-card>
 <ng-template #dialog>
