feat: Added localisation

--- a/src/app/pages/patients/add/add.component.html
+++ b/src/app/pages/patients/add/add.component.html
@@ -172,7 +172,7 @@
                 </div>
                 <div class="col-auto d-flex justify-content-end">
                     <button class="mr-3" [disabled]="!profileForm.valid" nbButton
-                        status="success">Save</button>
+                        status="success">{{'kSave' | translate}}</button>
                 </div>
             </div>
         </nb-card-body>
