--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -57,16 +57,16 @@
             </div>
             <div class="col-md-3 mt-3">
                 <button nbButton status="primary" class="mb-2 w-100 btn-lg" size="small">
-                    <nb-icon icon="message-circle-outline"></nb-icon>Chat</button>
+                    <nb-icon icon="message-circle-outline"></nb-icon>{{'kChat' | translate}}</button>
                 <button nbButton  [nbPopover]="templateRef" nbPopoverPlacement="right" status="success" class="mb-2 w-100 btn-lg" size="small">
-                    <nb-icon icon="phone-call-outline"></nb-icon>Call</button>
-                <button nbButton status="warning" class="mb-2 w-100" size="small"><nb-icon icon="clock-outline"></nb-icon>Schedule</button>
+                    <nb-icon icon="phone-call-outline"></nb-icon>{{'kCall' | translate}}</button>
+                <button nbButton status="warning" class="mb-2 w-100" size="small"><nb-icon icon="clock-outline"></nb-icon>{{'kSchedule' | translate}}</button>
             </div> 
             <ng-template #templateRef>
                 <div class="p-3">
-                <button nbButton status="success" class="m-1" size="small"><nb-icon icon="headphones-outline"></nb-icon>Audio</button>
-                <button nbButton status="success" class="m-1" size="small"><nb-icon icon="video-outline"></nb-icon>Video</button>
-                <button nbButton status="success" class="m-1" size="small"><nb-icon icon="phone-call-outline"></nb-icon>Call Bridge</button>
+                <button nbButton status="success" class="m-1" size="small"><nb-icon icon="headphones-outline"></nb-icon>{{'kAudio' | translate}}</button>
+                <button nbButton status="success" class="m-1" size="small"><nb-icon icon="video-outline"></nb-icon>{{'kVideo' | translate}}</button>
+                <button nbButton status="success" class="m-1" size="small"><nb-icon icon="phone-call-outline"></nb-icon>{{'kCAllBridge' | translate}}</button>
                 </div>
               </ng-template>
         </div>
