feat: Added localization

--- a/src/app/pages/patients/vitals/chart/temperature/temperature.component.html
+++ b/src/app/pages/patients/vitals/chart/temperature/temperature.component.html
@@ -1,4 +1,4 @@
-<p class="subtitle">Temperature</p>
+<p class="subtitle">{{'kTemperature' | translate}}</p>
 <div class="d-block" [nbSpinner]="isLoading">
     <canvas baseChart width="400" height="150" [datasets]="lineChartData" [labels]="lineChartLabels" [options]="lineChartOptions"
         [colors]="lineChartColors" [legend]="lineChartLegend" [chartType]="lineChartType" [plugins]="lineChartPlugins">
