--- a/src/app/pages/patients/vitals/chart/blood-pressure/blood-pressure.component.html
+++ b/src/app/pages/patients/vitals/chart/blood-pressure/blood-pressure.component.html
@@ -1,4 +1,4 @@
-<p class="subtitle"> Blood Pressure</p>
+<p class="subtitle">{{'kBloodPressure' | translate}}</p>
 <div class="d-block" [nbSpinner]="isLoading">
     <canvas baseChart width="400" height="150" [datasets]="lineChartData" [labels]="lineChartLabels"
         [colors]="lineChartColors" [legend]="lineChartLegend" [chartType]="lineChartType" [plugins]="lineChartPlugins" [options]="lineChartOptions">
