--- a/src/app/pages/patients/vitals/chart/spo2/spo2.component.html
+++ b/src/app/pages/patients/vitals/chart/spo2/spo2.component.html
@@ -1,4 +1,4 @@
-<p class="subtitle">SPO2</p>
+<p class="subtitle">{{'KPulseOximeterType' | translate}}</p>
 <div class="d-block" [nbSpinner]="isLoading">
     <canvas baseChart width="400" height="150" [datasets]="lineChartData" [labels]="lineChartLabels" [options]="lineChartOptions"
         [colors]="lineChartColors" [legend]="lineChartLegend" [chartType]="lineChartType" [plugins]="lineChartPlugins">
