--- a/src/app/pages/patients/care-team/care-circle/care-circle.component.scss
+++ b/src/app/pages/patients/care-team/care-circle/care-circle.component.scss
@@ -9,7 +9,7 @@
     content: "";
     position: absolute;
     top: 0; left: 0;
-    // border: 2px solid #3366ff;
+    border: 2px solid #dee2e6;
     width: calc( 100% - 2px * 2);
     height: calc( 100% - 2px * 2 );
     border-radius: 50%;
@@ -21,8 +21,9 @@
     width: 100px;
     height: 100px;
     margin: calc( -100px / 2 );
-    background: #3366ff;
+    background: #dee2e6;
     border-radius: 50%;
+    border-width: 3px !important;
   }
 
   .primary-circle {
@@ -32,6 +33,6 @@
   }
 
   #care-circle ::ng-deep ngx-avatar .avatar-container {
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5) !important;
+    box-shadow: 0 0.5rem 1rem 0 rgba(44, 51, 73, 0.1)!important;
     border-radius: 50% !important;
   }
