--- a/src/app/pages/patients/care-team/care-team.component.html
+++ b/src/app/pages/patients/care-team/care-team.component.html
@@ -1,12 +1,9 @@
-<nb-card size="large" style="overflow: auto" status="info" class="mt-3" [nbSpinner]="isLoading">
+<nb-card size="large" style="overflow: auto" [nbSpinner]="isLoading">
     <nb-card-header>
         <div class="row">
-            <div class="col-10">
-                <h6 class="text-white">{{'KCareTeam' | translate}}</h6>
-            </div>
-            <div class="col-2 p-0">
+            <div class="col-2 offset-10 p-0">
                 <button nbButton ghost size="gaint" class="f-right" (click)="open(dialog)">
-                    <nb-icon icon="plus" nbTooltip="Add Care Givers" nbTooltipStatus="control" class="text-white">
+                    <nb-icon icon="plus" nbTooltip="Add Care Givers" nbTooltipStatus="control" status="primary">
                     </nb-icon>
                 </button>
             </div>
